# tetrizz

./: .gitignore  Cargo.toml
benches/: beam_search.rs  movegen_all.rs
src/: beam_search.rs  data.rs  eval.rs  genetic.rs  lib.rs  main.rs  movegen.rs
